--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,9 +11,12 @@ jemallocator = { version = "0.5.4", optional = true }
 libc = "0.2.171"
 prost = "0.13.5"
 rand = "0.9.0"
+serde = { version = "1.0.219", features = ["derive"] }
+serde_json = "1.0.140"
 tokio = { version = "1.44.1", features = ["rt", "sync", "net", "signal", "tracing"] }
 tokio-serial = "5.4.5"
 tokio-stream = "0.1.17"
+tokio-tungstenite = "0.26.2"
 tokio-util = "0.7.14"
 tonic = "0.13.0"
 tower-http = { version = "0.6.2", features = ["trace"] }
