--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -22,7 +22,7 @@ jobs:
       name: Check out repository
 
     - name: Build
-      run: cargo build --release --features jemallocator --verbose
+      run: cargo build --release
       
     - name: Upload artifacts
       uses: actions/upload-artifact@v4
