--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -15,8 +15,12 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Install target
-      run: rustup target add armv7-unknown-linux-musleabihf
+    - name: Install dependencies
+      run: |
+        apt-get update
+        apt-get install -y protobuf-compiler
+        rustup update
+        rustup target add armv7-unknown-linux-musleabihf
       
     - uses: actions/checkout@v4
       name: Check out repository
