--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,9 +2,10 @@ name: Rust
 
 on:
   push:
-    branches: [ "master" ]
+    branches: "*"
+    tags: "*"
   pull_request:
-    branches: [ "master" ]
+    branches: "*"
 
 env:
   CARGO_TERM_COLOR: always
